# fintech-compliance

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
data/regulatory/enforcement/: bafin_wirecard.json  celsius_sec.json  cnil_google.json  kraken_cftc.json  revolut_fca.json
docker/: docker-compose.yml
examples/: analyze_project_example.py  api_client_example.py  test_claude_weaviate.py
scripts/: test_setup.py
src/: config.py
src/agents/blockchain_compliance_agent/: __init__.py  agent.py  contract_analyzer.py  prompts.py  tools.py
src/api/: __init__.py  config.py  main.py  middleware.py  schemas.py
src/api/routes/: __init__.py  analyze.py  health.py  search.py
src/collectors/: bitcoin_simplicity_collector.py  case_law_collector.py  regulatory_collector.py
src/collectors/data/: regulatory_collector.py
src/data/: weaviate.py
src/utils/: logger.py  simplicity_compiler.py  weaviate_viewer.py
tests/: __init__.py  conftest.py  test_agent.py  test_api.py  test_collectors.py  test_config.py  test_multisig_complete_analysis.py
tests/fixtures/: sample_projects.json
tests/test_cases/: test_goldtoken_simplicity.py  test_multisig_complete_analysis.py  test_multisig_wallet_covenant.py
